@@ -70,7 +70,11 @@ DrawingAreaImpl::DrawingAreaImpl(WebPage* webPage, const WebPageCreationParamete
 {
     if (webPage->corePage()->settings()->acceleratedDrawingEnabled() || webPage->corePage()->settings()->forceCompositingMode())
         m_alwaysUseCompositing = true;
-        
+
+#if USE(COORDINATED_GRAPHICS)
+    m_alwaysUseCompositing = true;
+#endif
+
     if (m_alwaysUseCompositing)
         enterAcceleratedCompositingMode(0);
 }
